<resources>
    <string name="app_name">Bakkle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="guest_user">Guest User</string>
    <string name="guest_email">guest@bakkle.com</string>
    <string name="save_to_watch_list">Save to Watch List</string>
    <string name="make_an_offer">Make an Offer</string>
    <string name="send_message">Send Message</string>
    <string name="ask_the_seller_more_about_the_item">Ask the seller more about the item</string>
    <string name="start_a_chat">Start a Chat!</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="error_password_mismatch">Passwords don\'t match</string>

    <string name="facebook_app_id">1592001697724990</string>
    <string name="facebook_authorities">com.facebook.app.FacebookContentProvider1592001697724990</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>
    <string name="want">WANT</string>
    <string name="nope">NOPE</string>
    <string name="save">SAVE</string>
    <string name="report">REPORT</string>

    <string name="set_description">Set your account description here</string>
    <string name="edit">Edit</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_add_item">AddItemActivity</string>

    <string name="title_activity_selling_one_item">SellingOneItemActivity</string>
    <string name="network_error">There was an error! Please check your Network Connection and try again</string>
    <string name="end_feed_message">Nice! You reached the end of the Feed! To see more items, try expanding your price or distance range</string>
    <string name="refresh">REFRESH</string>
    <string name="feed">Feed</string>
    <string name="buying">Buying</string>
    <string name="selling">Selling</string>
    <string name="watch_list">Watch List</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="view_item">View Item</string>
    <string name="location_error_text">Location Access is needed for Bakkle to function properly and display items that are near you</string>
    <string name="grant_location_permission">Grant Location Permission</string>


    <string name="mcam_defaultDuration">00:00</string>
    <string name="mcam_permissions_needed">Permissions Needed</string>
    <string name="mcam_video_perm_warning">Permission to access your microphone and camera is needed, the camera will now close.</string>
    <string name="mcam_retry">RETRY</string>
    <string name="mcam_use_video">USE VIDEO</string>
    <string name="mcam_portrait">Portrait</string>
    <string name="mcam_portrait_warning">It\'s recommended that you record in landscape. Record in portrait?</string>
    <string name="mcam_yes">Yes</string>
    <string name="mcam_error">Error</string>
    <string name="mcam_video_capture_unsupported">Your device does not support video capture.</string>
    <string name="mcam_no_audio_access">You haven\'t given access to your microphone; no audio will be recorded.</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="action_settings">Settings</string>
    <string name="contact">Contact</string>
    <string name="tutorial">Tutorial</string>
    <string name="selling_empty_message">You haven\'t listed any items to sell yet!</string>
    <string name="watchlist_empty_message">You haven\'t added anything to your watchlist yet!</string>
    <string name="buying_empty_message">You haven\'t swiped right on anything yet!</string>

</resources>
