<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#de000000"
    android:clickable="true"
    tools:context="com.bakkle.bakkle.TakeActionFragment">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/start_a_chat"
        android:textColor="@color/colorTextAndIcons"
        android:textSize="56sp"/>

    <TextView
        android:id="@+id/subheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:text="@string/ask_the_seller_more_about_the_item"
        android:textColor="@color/colorTextAndIcons"
        android:textSize="16sp"/>

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/product"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@id/subheader"
        android:layout_centerHorizontal="true"
        android:layout_margin="56dp"/>

    <Button
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product"
        android:layout_centerHorizontal="true"
        android:text="@string/send_message"
        android:theme="@style/GreenButton"/>

    <Button
        android:id="@+id/offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_centerHorizontal="true"
        android:text="@string/make_an_offer"
        android:theme="@style/GreenButton"/>

    <Button
        android:id="@+id/save"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/save_to_watch_list"
        android:textColor="@color/colorTextAndIcons"/>

    <!--TODO: Make buttons green below API 21 -->

</RelativeLayout>
