<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context="com.bakkle.bakkle.SignupLoginChooser">

    <ImageView
        android:id="@+id/bakkle_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="56dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/logo_white_clear"/>


    <TextView
        android:id="@+id/sign_up_with_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bakkle_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_with"
        android:textColor="@color/colorTextAndIcons"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_with_text"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/email_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/facebook_button"
        android:layout_centerHorizontal="true"
        android:text="@string/prompt_email"
        android:textColor="@color/colorTextAndIcons"
        android:theme="@style/AccentButton"/>

    <TextView
        android:id="@+id/already_have_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_in_button"
        android:layout_centerHorizontal="true"
        android:text="@string/already_have_an_account"
        android:textColor="@color/colorTextAndIcons"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/action_sign_in_short"
        android:theme="@style/AccentButton"/>


</RelativeLayout>
