<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/cardView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="450dp"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    card_view:cardBackgroundColor="@color/colorCardAndDialogDark"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="0dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp">

            <com.bakkle.bakkle.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/avatar_width"
                android:layout_height="@dimen/avatar_height"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                card_view:civ_border_color="@color/colorTextAndIcons"
                card_view:civ_border_width="1dp"/>


            <TextView
                android:id="@+id/seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/avatar"
                android:paddingLeft="20dp"
                android:textColor="@color/colorTextAndIcons"
                android:textSize="14sp"/>

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/info"
            android:layout_below="@+id/topBar">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"/>

            <View
                android:id="@+id/darkener"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0"
                android:background="#000000"/>


            <TextView
                android:id="@+id/item_swipe_left_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:alpha="0"
                android:text="@string/want"
                android:textColor="@color/colorPrimary"
                android:textSize="48sp"
                />

            <TextView
                android:id="@+id/item_swipe_right_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="10dp"
                android:layout_marginTop="50dp"
                android:alpha="0"
                android:text="@string/nope"
                android:textColor="@color/colorNope"
                android:textSize="48sp"/>

            <TextView
                android:id="@+id/item_swipe_bottom_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_margin="10dp"
                android:alpha="0"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="48sp"/>

            <TextView
                android:id="@+id/item_swipe_top_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_margin="10dp"
                android:alpha="0"
                android:text="@string/report"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="48sp"/>
        </FrameLayout>


        <RelativeLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="24dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="24dp">


            <TextView
                android:id="@+id/title"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:singleLine="true"
                android:textColor="@color/colorTextAndIcons"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorSecondaryText"
                android:textSize="24sp"/>
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
